<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_marginEnd="@dimen/_20sdp"
    android:layout_marginStart="@dimen/_20sdp"
    android:weightSum="3"
    android:layout_height="@dimen/_115sdp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        app:cardCornerRadius="8dp"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/success"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/sueccss"
                android:fontFamily="@font/impact"/>
            <TextView
                android:id="@+id/success"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="@dimen/_30sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/impact"/>

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        app:cardCornerRadius="8dp"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unsuccess"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/unsuceess"
                android:fontFamily="@font/impact"/>

            <TextView
                android:id="@+id/unsuccess"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="@dimen/_30sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/impact"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        app:cardCornerRadius="8dp"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/total"
                android:fontFamily="@font/impact"/>

            <TextView
                android:id="@+id/total"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="@dimen/_30sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/impact"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>